; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_ext_16.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_ext_16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DY = common dso_local global i32 0, align 4
@FLAG_N = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i32 0, align 4
@VFLAG_CLEAR = common dso_local global i32 0, align 4
@FLAG_V = common dso_local global i32 0, align 4
@CFLAG_CLEAR = common dso_local global i32 0, align 4
@FLAG_C = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_ext_16() #0 {
  %1 = alloca i32*, align 8
  store i32* @DY, i32** %1, align 8
  %2 = load i32*, i32** %1, align 8
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @MASK_OUT_BELOW_16(i32 %3)
  %5 = load i32*, i32** %1, align 8
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @MASK_OUT_ABOVE_8(i32 %6)
  %8 = or i32 %4, %7
  %9 = load i32*, i32** %1, align 8
  %10 = load i32, i32* %9, align 4
  %11 = call i64 @GET_MSB_8(i32 %10)
  %12 = icmp ne i64 %11, 0
  %13 = zext i1 %12 to i64
  %14 = select i1 %12, i32 65280, i32 0
  %15 = or i32 %8, %14
  %16 = load i32*, i32** %1, align 8
  store i32 %15, i32* %16, align 4
  %17 = load i32*, i32** %1, align 8
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @NFLAG_16(i32 %18)
  store i32 %19, i32* @FLAG_N, align 4
  %20 = load i32*, i32** %1, align 8
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @MASK_OUT_ABOVE_16(i32 %21)
  store i32 %22, i32* @FLAG_Z, align 4
  %23 = load i32, i32* @VFLAG_CLEAR, align 4
  store i32 %23, i32* @FLAG_V, align 4
  %24 = load i32, i32* @CFLAG_CLEAR, align 4
  store i32 %24, i32* @FLAG_C, align 4
  ret void
}

declare dso_local i32 @MASK_OUT_BELOW_16(i32) #1

declare dso_local i32 @MASK_OUT_ABOVE_8(i32) #1

declare dso_local i64 @GET_MSB_8(i32) #1

declare dso_local i32 @NFLAG_16(i32) #1

declare dso_local i32 @MASK_OUT_ABOVE_16(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
